watchlist fx scende added,navigation works

--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/styles.css
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/styles.css
@@ -3,6 +3,11 @@
     -fx-background-color: #f5c518;
 }
 
+.background-yellow:pressed {
+    -fx-background-color: #F5C518;
+}
+
+
 .background-black {
     -fx-background-color: #000000;
 }
