--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
@@ -10,7 +10,25 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import java.net.URL?>
 <VBox prefHeight="331.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.fhmdb.HomeController">
+   <VBox style="-fx-background-color: black;">
+      <stylesheets>
+         <URL value="@styles.css" />
+      </stylesheets>
+
+      <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="347.0" spacing="20.0">
+         <padding>
+            <Insets bottom="7.0" left="10.0" top="7.0" />
+         </padding>
+         <children>
+            <!-- Home button -->
+            <JFXButton fx:id="homeButton" onAction="#switchToHome" styleClass="background-yellow" text="Home" />
+            <!-- Watchlist button -->
+            <JFXButton fx:id="watchlistButton" onAction="#switchToWatchlist" styleClass="background-yellow" text="Watchlist" />
+         </children>
+      </HBox>
+   </VBox>
    <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="347.0" spacing="20.0" style="-fx-background-color: black;">
       <padding>
          <Insets bottom="7.0" left="10.0" top="7.0" />
@@ -24,7 +42,7 @@
                <Insets left="2.0" right="2.0" />
             </padding>
          </Label>
-         <Label styleClass="text-white" stylesheets="@styles.css" text="Welcome to FHMDb!" />
+         <Label styleClass="text-white" stylesheets="@styles.css" text="Home" />
       </children>
    </HBox>
    <HBox spacing="5.0" styleClass="background-black" stylesheets="@styles.css">
