--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/home-view.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 
 <?import java.net.URL?>
-<VBox prefHeight="331.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.fhmdb.HomeController">
+<VBox prefHeight="331.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.fhmdb.controllers.HomeController">
    <VBox style="-fx-background-color: black;">
       <stylesheets>
          <URL value="@styles.css" />
