--- a/src/main/resources/at/ac/fhcampuswien/fhmdb/watchlist-view.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/fhmdb/watchlist-view.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXListView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import com.jfoenix.controls.JFXButton?>
-
 <?import java.net.URL?>
-<VBox prefHeight="331.0" prefWidth="570.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="at.ac.fhcampuswien.fhmdb.WatchlistController">
+
+<VBox prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="at.ac.fhcampuswien.fhmdb.controllers.WatchlistController">
     <stylesheets>
         <URL value="@styles.css" />
     </stylesheets>
@@ -21,9 +21,9 @@
             </padding>
             <children>
                 <!-- Home button -->
-                <JFXButton fx:id="homeButton" onAction="#switchToHome" styleClass="background-yellow" text="Home" />
+                <Button fx:id="homeButton" onAction="#switchToHome" styleClass="background-yellow" text="Home" />
                 <!-- Watchlist button -->
-                <JFXButton fx:id="watchlistButton" onAction="#switchToWatchlist" styleClass="background-yellow" text="Watchlist" />
+                <Button fx:id="watchlistButton" onAction="#switchToWatchlist" styleClass="background-yellow" text="Watchlist" />
             </children>
         </HBox>
     </VBox>
@@ -55,5 +55,5 @@
         </padding>
     </HBox>
 
-    <JFXListView fx:id="watchlistListView" stylesheets="@styles.css" VBox.vgrow="ALWAYS"/>
+    <ListView fx:id="watchlistListView" stylesheets="@styles.css" VBox.vgrow="ALWAYS"/>
 </VBox>
